@@ -1,3 +1,8 @@
+2012-11-27  Roland McGrath  <mcgrathr@google.com>
+
+	* ld-elf/flags1.d: Add *-*-nacl* to xfail list.
+	* ld-elf/orphan-region.d: Likewise.
+
 2012-11-21  Roland McGrath  <mcgrathr@google.com>
 
 	* ld-elf/comm-data.exp: Add XFAIL for arm*-*-* targets, referring
